# team-stack-silicon-valley

./: .env.example  .gitignore  .opencode.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CIRCUIT_BREAKER.md  ERROR-001.md  ERROR-002.md  ERROR-003.md  INCIDENT_LOG.md  LICENSE  METRICS_DASHBOARD.md  README.md  ROADMAP.md  docker-compose.yml  index.html  opencode.json  opencode.json.tui-migration.bak  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  🎛️ MIDI Studio V3 — Arquitectura Técnica Definitiv 3535f8c7cf88812f9533d107ee713b80.md
.github/workflows/: agent-ci.yml
.opencode/agents/: adam.md  atlas.md  cipher.md  forge.md  herald.md  nexus.md  pixel.md  sentinel.md
prompts/instructions/: adam.md  atlas.md  cipher.md  forge.md  herald.md  nexus.md  pixel.md  sentinel.md
scripts/: health-check.ps1
src/: app.ts  main.ts
src-tauri/: Cargo.toml  PHASE1A.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  fs.rs  projects.rs  terminal.rs
src-tauri/src/pty/: mod.rs  portable_impl.rs
src-tauri/src/tests/: pty_test.rs
src/icons/: index.ts
src/store/: agents.ts  projects.ts  ui.ts
src/styles/: base.css  editor.css  explorer.css  kanban.css  layout.css  onboarding.css  rightpanel.css  tokens.css  voicebutton.css
super-skills/: adam-skills.md  atlas-skills.md  cipher-skills.md  forge-skills.md  herald-skills.md  nexus-skills.md  pixel-skills.md  sentinel-skills.md
workflows/: hotfix.md  new-feature.md  refactoring.md
(+32 files in other folders)
